plugins {
    id 'java'
    id 'application'
}

group 'org.sun.ghosh'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_20
targetCompatibility = JavaVersion.VERSION_20

ext {
    javaMainClass = "org.sun.ghosh.MyFavoriteJavaSites"
}

application {
    mainClassName = javaMainClass
    applicationDefaultJvmArgs = ["--enable-preview", '--add-modules', 'jdk.incubator.concurrent']
}

repositories {
    mavenCentral()
}

compileJava {
    options.compilerArgs.addAll(
            ['--enable-preview',
             '--add-modules', 'jdk.incubator.concurrent'
            ])
}

dependencies {
//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}